--- a/Growth/src/theme/variables.scss
+++ b/Growth/src/theme/variables.scss
@@ -6,7 +6,7 @@
     /** primary **/
     --ion-color-primary: #023435;
       --ion-color-primary-rgb: 2,52,53;
-      --ion-color-primary-contrast: #ffffff;
+      --ion-color-primary-contrast: #e3e3e3;
       --ion-color-primary-contrast-rgb: 255,255,255;
       --ion-color-primary-shade: #022e2f;
       --ion-color-primary-tint: #1b4849;
@@ -22,7 +22,7 @@
     /** tertiary **/
     --ion-color-tertiary: #01B5AA;
       --ion-color-tertiary-rgb: 1,181,170;
-      --ion-color-tertiary-contrast: #ffffff;
+      --ion-color-tertiary-contrast: #e3e3e3;
       --ion-color-tertiary-contrast-rgb: 255,255,255;
       --ion-color-tertiary-shade: #019f96;
       --ion-color-tertiary-tint: #1abcb3;
@@ -30,7 +30,7 @@
     /** success **/
     --ion-color-success: #2dd36f;
     --ion-color-success-rgb: 45, 211, 111;
-    --ion-color-success-contrast: #ffffff;
+    --ion-color-success-contrast: #e3e3e3;
     --ion-color-success-contrast-rgb: 255, 255, 255;
     --ion-color-success-shade: #28ba62;
     --ion-color-success-tint: #42d77d;
@@ -46,7 +46,7 @@
     /** danger **/
     --ion-color-danger: #eb445a;
     --ion-color-danger-rgb: 235, 68, 90;
-    --ion-color-danger-contrast: #ffffff;
+    --ion-color-danger-contrast: #e3e3e3;
     --ion-color-danger-contrast-rgb: 255, 255, 255;
     --ion-color-danger-shade: #cf3c4f;
     --ion-color-danger-tint: #ed576b;
@@ -54,7 +54,7 @@
     /** dark **/
     --ion-color-dark: #222428;
     --ion-color-dark-rgb: 34, 36, 40;
-    --ion-color-dark-contrast: #ffffff;
+    --ion-color-dark-contrast: #e3e3e3;
     --ion-color-dark-contrast-rgb: 255, 255, 255;
     --ion-color-dark-shade: #1e2023;
     --ion-color-dark-tint: #383a3e;
@@ -62,14 +62,14 @@
     /** medium **/
     --ion-color-medium: #69807F;
       --ion-color-medium-rgb: 105,128,127;
-      --ion-color-medium-contrast: #ffffff;
+      --ion-color-medium-contrast: #e3e3e3;
       --ion-color-medium-contrast-rgb: 255,255,255;
       --ion-color-medium-shade: #5c7170;
       --ion-color-medium-tint: #788d8c;
   
     // --ion-color-medium: #92949c;
     // --ion-color-medium-rgb: 146, 148, 156;
-    // --ion-color-medium-contrast: #ffffff;
+    // --ion-color-medium-contrast: #e3e3e3;
     // --ion-color-medium-contrast-rgb: 255, 255, 255;
     // --ion-color-medium-shade: #808289;
     // --ion-color-medium-tint: #9d9fa6;
