Pagina de Login completa e formatada

--- a/Growth/src/app/folder/folder.page.html
+++ b/Growth/src/app/folder/folder.page.html
@@ -27,7 +27,7 @@
     </ion-item>
 
     <!-- Botões -->
-    <ion-button expand="block" style="margin-top: 20px;">Entrar</ion-button>
-    <ion-button expand="block" fill="outline" style="margin-top: 10px;">Criar Conta</ion-button>
+    <ion-button id="Entrar" expand="block" style="margin-top: 20px;">Entrar</ion-button>
+    <ion-button id="Criar" expand="block" fill="outline" style="margin-top: 10px;">Criar Conta</ion-button>
   </div>
 </ion-content>
