--- a/Growth/src/theme/variables.scss
+++ b/Growth/src/theme/variables.scss
@@ -1,8 +1,8 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
-
 /** Ionic CSS Variables **/
 :root {
+    --ion-background-color: #0B3D2E;
     /** primary **/
     --ion-color-primary: #023435;
       --ion-color-primary-rgb: 2,52,53;
