--- a/Growth/src/app/folder/folder.page.scss
+++ b/Growth/src/app/folder/folder.page.scss
@@ -1,37 +1,38 @@
 ion-header {
-  --background: var(--ion-background-color, #E3E3E3);
   text-align: center;
 }
 
 ion-toolbar {
-  --background: var(--ion-background-color, #232325);
-  color: var(--ion-text-color, #e3e3e3);
+  --background: #232325;
+  color: #e3e3e3;
 }
 ion-content {
-  --background: var(--ion-background-color, #0B3D2E);
   color: var(--ion-text-color, #e3e3e3);
 }
 ion-item {
-  --background: var(--ion-background-color, #0B3D2E);
   color: var(--ion-text-color, #e3e3e3);
-  border-radius: 5px;
 }
 ion-input {
-  --background: var(--ion-background-color, #0B3D2E);
-  color: var(--ion-text-color, #e3e3e3);
-  border: 2px solid #e3e3e3b1;
+  border: 1px solid #e3e3e3b1;
+  --padding-start: 10px;
   border-radius: 5px;
   margin-top: 15px; 
-  margin-bottom: 15px; /* Espaçamento entre os itens */
+  margin-bottom: 15px; 
 }
-.input-wrapper.sc-ion-input-md {
-  border-radius: 5px;
+ion-button {
+  --border: none;
+  --border-radius: 8px;
+  font-weight: bold;
 }
-.native-input.sc-ion-input-md {
-  padding-left: auto;
+#Entrar {
+  --background: #e3e3e3; /* Fundo do botão Entrar */
+  --color: var(--ion-background-color); /* Cor da letra (mesma cor do fundo do botão Criar) */
 }
-ion-menu-button {
-  color: var(--ion-color-primary);
+#Criar {
+  --background: #232325; /* Fundo do botão Criar (mesma cor do fundo da toolbar) */
+  --color: #e3e3e3; /* Cor da letra (mesma cor do fundo do botão Entrar) */
+  border: 1px solid #e3e3e3b1;
+  border-radius: 8px;
 }
 
 #container {
