--- a/Growth/src/theme/variables.scss
+++ b/Growth/src/theme/variables.scss
@@ -2,7 +2,9 @@
 // http://ionicframework.com/docs/theming/
 /** Ionic CSS Variables **/
 :root {
+    --ion-text-color: #e3e3e3;
     --ion-background-color: #0B3D2E;
+    --dourado: #A88F5F;
     /** primary **/
     --ion-color-primary: #023435;
       --ion-color-primary-rgb: 2,52,53;
