--- a/Growth/src/global.scss
+++ b/Growth/src/global.scss
@@ -9,6 +9,28 @@
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
  * { font-family: 'Roboto', sans-serif; }
+ ion-toolbar {--background: #232323;}
+ ion-toolbar {color: var(--ion-text-color);}
+ ion-content {color: var(--ion-text-color); }
+ ion-item {color: var(--ion-text-color);}
+  ion-input {
+    border: 1px solid #e3e3e3b1;
+    --padding-start: 10px;
+    border-radius: 5px;
+    margin-top: 15px; 
+    margin-bottom: 15px; 
+  }
+  ion-button {
+    --border: none;
+    --border-radius: 8px;
+    font-weight: bold;
+  }
+  ion-button:hover {
+    transition: 300ms;
+    transform: scale(1.02);
+    --background: var(--dourado);
+    --color: var(--ion-text-color);
+  }
 /* Core CSS required for Ionic components to work properly */
 @import "@ionic/angular/css/core.css";
 
