detalhe no sidemenu

--- a/Growth/src/app/app.component.html
+++ b/Growth/src/app/app.component.html
@@ -12,7 +12,7 @@
               <span style="font-size: 20px; font-weight: bold;">R$ ****</span>
               <ion-icon name="eye-outline" style="cursor: pointer;"></ion-icon>
             </div>
-            <div style="display:flex; margin-top: 10px; text-align: left;">
+            <div id="Historico" style="display:flex; margin-top: 10px; text-align: left;">
               <ion-icon name="document-text-outline" style="vertical-align: middle;"></ion-icon>
               <span style="cursor: pointer;">Histórico</span>
             </div>
