--- a/Growth/src/app/cadastro/cadastro.page.scss
+++ b/Growth/src/app/cadastro/cadastro.page.scss
@@ -1,6 +1,6 @@
 #Cadastrar{
     --background: var(--ion-text-color);
-    --color: var(--ion-background-color);
+    --color: #045D56;
 }
 #Cadastrar:hover{
     --background: var(--dourado);
