--- a/Growth/src/global.scss
+++ b/Growth/src/global.scss
@@ -20,6 +20,9 @@
     margin-top: 15px; 
     margin-bottom: 15px; 
   }
+  .native-input.sc-ion-input-md {
+    padding-left: 10px;
+  }
   ion-button {
     --border: none;
     --border-radius: 8px;
