--- a/Growth/src/global.scss
+++ b/Growth/src/global.scss
@@ -14,7 +14,7 @@
  ion-content {color: var(--ion-text-color); }
  ion-item {color: var(--ion-text-color);}
   ion-input {
-    border: 1px solid #e3e3e3b1;
+    border: 1px solid rgba(227, 227, 227, 0.7);
     --padding-start: 10px;
     border-radius: 5px;
     margin-top: 15px; 
