--- a/Growth/src/app/app.component.scss
+++ b/Growth/src/app/app.component.scss
@@ -20,10 +20,10 @@ ion-item{
 #Contas {
   padding: 15px;
   margin: 10px;
-  border: 1px solid #045D56;
+  border: 1px solid rgba(4, 93, 86, 0.9);
   border-radius: 8px;
   background: rgba(255, 255, 255, 0.1); 
-  backdrop-filter: blur(3px); 
+  backdrop-filter: blur(2px); 
   color: var(--ion-text-color); 
 }
 #Historico {
