--- a/Growth/src/app/cadastro/cadastro.page.scss
+++ b/Growth/src/app/cadastro/cadastro.page.scss
@@ -1,3 +1,7 @@
+ion-content{
+    --background: url(../../../assets/icon-background.png);
+  }
+  
 #Cadastrar{
     --background: var(--ion-text-color);
     --color: #045D56;
