--- a/Growth/src/app/app.component.html
+++ b/Growth/src/app/app.component.html
@@ -6,28 +6,26 @@
           <ion-list-header>Menu</ion-list-header>
           <br>
 
-          <div id="Contas" style="text-align: center;cursor: pointer;"[ngClass]="{ 'ativo': isContasAtivo }" (click)="toggleContas($event);">
+          <div id="Contas" style="text-align: center;cursor: pointer;" [ngClass]="{ 'ativo': isContasAtivo }" (click)="toggleContas($event);">
             <ion-label style="display: flex; font-size: 14px;text-align: left;font-weight: bold;color: var(--ion-text-color); margin-bottom: 10px;">Saldo</ion-label>
             <div style="display: flex; justify-content: space-between; align-items: center;">
               <span style="font-size: 20px; font-weight: bold;">R$ ****</span>
               <ion-icon name="eye-outline" id="icone"></ion-icon>
             </div>
-            <div id="Historico" style="display:flex; margin-top: 10px; text-align: left; cursor: pointer;"[ngClass]="{ 'ativo': isHistoricoAtivo }" (click)="navigateToHistorico($event)">
+            <div id="Historico" style="display:flex; margin-top: 10px; text-align: left; cursor: pointer;" [ngClass]="{ 'ativo': isHistoricoAtivo }" (click)="navigateToHistorico($event)">
               <ion-icon name="document-text-outline" style="vertical-align: middle;"></ion-icon>
               <span>Histórico</span>
             </div>
           </div>
 
-          @for (p of appPages; track p; let i = $index) {
-            <ion-menu-toggle auto-hide="false">
-              <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-                <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-                <ion-label>{{ p.title }}</ion-label>
-              </ion-item>
-            </ion-menu-toggle>
-          }
-        </ion-list>
+          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
+            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
+              <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+              <ion-label>{{ p.title }}</ion-label>
+            </ion-item>
 
+          </ion-menu-toggle>
+        </ion-list>
       </ion-content>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
