--- a/Growth/src/app/folder/folder.page.html
+++ b/Growth/src/app/folder/folder.page.html
@@ -5,8 +5,6 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
-
   <div id="container" style="text-align: center; padding: 20px;">
     <!-- Logo do app -->
     <img src="assets/img/icon-only.png" alt="Logo Growth Investimentos" style="width: 250px; margin-bottom: 20px;">
@@ -14,16 +12,16 @@
     <!-- Formulário de login -->
     <ion-item lines="none" style="--ion-item-background: transparent;">
       <ion-label position="stacked">E-mail/CNPJ</ion-label>
-      <ion-input type="text" placeholder="Digite seu e-mail ou CNPJ"></ion-input>
+      <ion-input type="text" placeholder="Digite seu e-mail ou CNPJ" [(ngModel)]="login.emailCnpj"></ion-input>
     </ion-item>
 
     <ion-item lines="none" style="--ion-item-background: transparent;">
       <ion-label position="stacked">Senha</ion-label>
-      <ion-input type="password" placeholder="Digite sua senha"></ion-input>
+      <ion-input type="password" placeholder="Digite sua senha" [(ngModel)]="login.senha"></ion-input>
     </ion-item>
 
     <!-- Botões -->
-    <ion-button id="Entrar" expand="block" style="margin-top: 20px;">Entrar</ion-button>
-    <ion-button id="Criar" expand="block" fill="outline" style="margin-top: 10px;" (click)="add()">Criar Conta</ion-button>
+    <ion-button id="Entrar" expand="block" style="margin-top: 20px;" (click)="logar()">Entrar</ion-button>
+    <ion-button id="Criar" expand="block" fill="outline" style="margin-top: 10px;" (click)="criarConta()">Criar Conta</ion-button>
   </div>
 </ion-content>
