--- a/Growth/src/app/home/home.page.html
+++ b/Growth/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button> <!-- Ícone para abrir o sidemenu -->
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Growth Investimentos</ion-title>
     <ion-buttons slot="end">
@@ -20,7 +20,6 @@
   <!-- Saudação -->
   <div class="greeting">
     <p>Olá, [Nome]!</p>
-    <p>Veja o status atual da sua conta</p>
   </div>
 
   <!-- Projetos em Destaque -->
@@ -104,7 +103,7 @@
   <div class="section avaliacoes">
     <h2>Avaliações dos Cotistas</h2>
     <div class="avaliacao">
-      <p><strong>CoitistaFeliz99</strong> ⭐⭐⭐⭐⭐</p>
+      <p><strong>CotistaFeliz99</strong> ⭐⭐⭐⭐⭐</p>
       <p>O projeto tem trazido muitos retornos!</p>
       <p>👍 💬</p>
     </div>
@@ -125,8 +124,15 @@
 
   <!-- Botão Flutuante -->
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button class="fixed-button">
+    <ion-fab-button class="fixed-button" (click)="openAddProjectModal()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
+
+  <!-- Modal -->
+  <ion-modal [isOpen]="isModalOpen" (didDismiss)="closeModal()" class="fullscreen-modal">
+    <ng-template>
+      <app-addproj></app-addproj>
+    </ng-template>
+  </ion-modal>
 </ion-content>
