--- a/Growth/src/app/home/home.page.scss
+++ b/Growth/src/app/home/home.page.scss
@@ -11,8 +11,8 @@
   color: var(--ion-text-color); /* Substituído para usar a variável */
 }
 
-.greeting p {
-  margin: 0;
+p {
+    margin: 16px;
   font-size: 18px;
   font-weight: bold;
   color: var(--ion-text-color); /* Substituído para usar a variável */
@@ -29,13 +29,14 @@
   margin-bottom: 24px;
 }
 
-.destaque h2 {
+h2 {
   font-size: 20px;
-  margin-bottom: 12px;
+  margin: 16px;
   color: var(--ion-text-color); /* Substituído para usar a variável */
 }
 
 .destaque .tags {
+    margin: 16px;
   display: flex;
   gap: 8px;
 }
@@ -55,7 +56,7 @@
 
 .destaques-projetos h2 {
   font-size: 20px;
-  margin-bottom: 12px;
+  margin: 16px;
   color: var(--ion-text-color); /* Substituído para usar a variável */
 }
 
@@ -78,7 +79,7 @@
 }
 
 .projeto .imagem {
-  background-color: #003300;
+  background-color: #23252480;
   color: var(--ion-text-color); /* Substituído para usar a variável */
   height: 120px;
   display: flex;
@@ -118,7 +119,7 @@
 }
 
 .card .imagem {
-  background-color: #003300;
+  background-color: #23252480; /* Fundo com 50% de transparência */
   height: 100px;
   margin-bottom: 8px;
   display: flex;
@@ -133,17 +134,35 @@
 }
 
 .imagem-post {
-  background-color: #003300; /* Fundo verde escuro */
-  height: 120px; /* Altura do quadrado */
-  width: 120px; /* Largura do quadrado */
+  background-color: #23252480;
+  height: 120px;
+  width: 120px;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 8px; /* Bordas arredondadas */
-  margin: 16px auto; /* Centraliza o elemento */
+  border-radius: 8px;
+  margin: 16px auto;
 }
 
 .placeholder-icon {
-  font-size: 48px; /* Tamanho do ícone */
-  color: var(--ion-text-color); /* Cor do ícone */
+  font-size: 48px;
+  color: var(--ion-text-color);
+}
+
+.fullscreen-modal {
+  --width: 100%; /* Largura total da tela */
+
+  --border-radius: 16px; /* Remove bordas arredondadas */
+  --transform: translateY(100%); /* Começa fora da tela */
+  animation: slide-up 0.3s ease-out forwards; /* Animação para subir */
+  padding: 0; /* Remove padding do modal */
+}
+
+@keyframes slide-up {
+  from {
+    transform: translateY(100%); /* Começa fora da tela */
+  }
+  to {
+    transform: translateY(0); /* Fica visível */
+  }
 }
