--- a/Growth/src/app/profile/profile.page.html
+++ b/Growth/src/app/profile/profile.page.html
@@ -3,10 +3,14 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Usuários</ion-title>
+    <ion-title>Perfil do Usuário</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Perfil do Usuário</ion-title>
+    </ion-toolbar>
+  </ion-header>
 </ion-content>
