criado admin 1 senha 0000

--- a/Growth/src/app/home/home.page.html
+++ b/Growth/src/app/home/home.page.html
@@ -19,7 +19,7 @@
 
   <!-- Saudação -->
   <div class="greeting">
-    <p>Olá, [Nome]!</p>
+    <p>Olá, {{ userName }}!</p> <!-- Exibe o nome do usuário -->
   </div>
 
   <!-- Projetos em Destaque -->
