--- a/Growth/src/app/saldo/saldo.page.scss
+++ b/Growth/src/app/saldo/saldo.page.scss
@@ -57,3 +57,20 @@ gap: 10px;
     margin: 0;
     font-size: 14px;
 }
+
+.notifications-modal {
+  --width: 90%; /* Largura do modal */
+  --height: 70%; /* Altura do modal */
+  --border-radius: 16px; /* Bordas arredondadas */
+  --background: var(--ion-background-color); /* Fundo do modal */
+  animation: slide-down 0.2s ease-out forwards; /* Animação para descer */
+}
+
+@keyframes slide-down {
+  from {
+    transform: translateY(-100%); /* Começa fora da tela, acima */
+  }
+  to {
+    transform: translateY(0); /* Fica visível */
+  }
+}
