--- a/Growth/src/app/home/home.page.html
+++ b/Growth/src/app/home/home.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>Growth Investimentos</ion-title>
     <ion-buttons slot="end">
-      <ion-icon name="notifications-outline" class="notification-icon"></ion-icon>
+      <ion-icon name="notifications-outline" class="notification-icon" (click)="openNotificationsModal()"></ion-icon>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -133,6 +133,13 @@
   <ion-modal [isOpen]="isModalOpen" (didDismiss)="closeModal()" class="fullscreen-modal">
     <ng-template>
       <app-addproj></app-addproj>
+    </ng-template>
+  </ion-modal>
+
+  <!-- Modal de Notificações -->
+  <ion-modal [isOpen]="isNotificationsModalOpen" (didDismiss)="closeNotificationsModal()" class="notifications-modal">
+    <ng-template>
+      <app-notificacoes></app-notificacoes>
     </ng-template>
   </ion-modal>
 </ion-content>
