--- a/Growth/src/app/home/home.page.scss
+++ b/Growth/src/app/home/home.page.scss
@@ -154,13 +154,30 @@ h2 {
 
   --border-radius: 16px; /* Remove bordas arredondadas */
   --transform: translateY(100%); /* Começa fora da tela */
-  animation: slide-up 0.3s ease-out forwards; /* Animação para subir */
+  animation: slide-up 0.2s ease-out forwards; /* Animação para subir */
   padding: 0; /* Remove padding do modal */
+}
+
+.notifications-modal {
+  --width: 90%; /* Largura do modal */
+  --height: 70%; /* Altura do modal */
+  --border-radius: 16px; /* Bordas arredondadas */
+  --background: var(--ion-background-color); /* Fundo do modal */
+  animation: slide-down 0.2s ease-out forwards; /* Animação para descer */
 }
 
 @keyframes slide-up {
   from {
     transform: translateY(100%); /* Começa fora da tela */
+  }
+  to {
+    transform: translateY(0); /* Fica visível */
+  }
+}
+
+@keyframes slide-down {
+  from {
+    transform: translateY(-100%); /* Começa fora da tela, acima */
   }
   to {
     transform: translateY(0); /* Fica visível */
