--- a/Growth/src/app/dev/dev.page.html
+++ b/Growth/src/app/dev/dev.page.html
@@ -8,15 +8,19 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-    <ion-menu-toggle auto-hide="false">
-      <ion-buttons style="width: 100%;">
+  <ion-menu-toggle auto-hide="false">
+  <div class="button-container">
 
-        <ion-button  style="width: 100%;" (click)="add1()">
-          <ion-icon style="font-size: 40px;margin-right: 10px;" name="people-circle-outline"></ion-icon>
-          <ion-label>Usuários</ion-label>
-        </ion-button>
+          <ion-button  style="width: 100%;" (click)="add1()">
+            <ion-icon style="font-size: 40px;margin-right: 10px;" name="people-circle-outline"></ion-icon>
+            <ion-label>Usuários</ion-label>
+          </ion-button>
 
+          <ion-button  style="width: 100%;" (click)="add2()">
+            <ion-icon style="font-size: 40px;margin-right: 10px;" name="browsers-outline"></ion-icon>
+            <ion-label>Projetos</ion-label>
+          </ion-button>
 
-      </ion-buttons>
-    </ion-menu-toggle>
-</ion-content>
+        </div>
+      </ion-menu-toggle>
+<ion-content>
